--- a/views/contact.html
+++ b/views/contact.html
@@ -7,6 +7,12 @@
 </head>
 <body class="page">
 
+  <nav class="navbar">
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/contact">Contact</a>
+  </nav>
+
 <div class="card">
   <h2>Contact us</h2>
 
