--- a/views/about.html
+++ b/views/about.html
@@ -7,37 +7,44 @@
 </head>
 <body>
 
-<!-- Navigation (same on all pages) -->
-<nav>
-  <a href="/">Home</a>
-  <a href="/about">About</a>
-  <a href="/contact">Contact</a>
-</nav>
+  <div class="layout">
 
-<h1>About This Project</h1>
+    <nav class="navbar">
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/contact">Contact</a>
+    </nav>
 
-<p>
-  This project is part of <strong>Assignment 1 – Part 2</strong> for the
-  Backend Web Development course.
-</p>
+    <section>
+      <h1>About This Project</h1>
 
-<p>
-  The goal of this project is to learn how to use <strong>Express.js</strong>
-  to handle routing, GET and POST requests, and form submissions.
-</p>
+      <p>
+        This project is part of <strong>Assignment 1 – Part 2</strong> for the
+        Backend Web Development course.
+      </p>
 
-<h2>Our Team</h2>
-<ul>
-  <li>Amina Dossan – Backend routes</li>
-  <li>Nazerke Abdizhamal – HTML pages</li>
-  <li>Yerassyl Alimbek – Web page structure, about page</li>
-  <li>Almat Zhamsat – Styling and layout</li>
-</ul>
+      <p>
+        The goal of this project is to learn how to use <strong>Express.js</strong>
+        to handle routing, GET and POST requests, and form submissions.
+      </p>
+    </section>
 
-<p>
-  We used Express.js to create multiple routes and handle user input
-  through a contact form.
-</p>
+    <section>
+      <h2>Our Team</h2>
+      <ul>
+        <li>Amina Dossan – Backend routes</li>
+        <li>Nazerke Abdizhamal – HTML pages</li>
+        <li>Yerassyl Alimbek – Page structure</li>
+        <li>Almat Zhamsat – Styling and layout</li>
+      </ul>
+
+      <p>
+        We used Express.js to create multiple routes and handle user input
+        through a contact form.
+      </p>
+    </section>
+
+  </div>
 
 </body>
 </html>
