--- a/views/404.html
+++ b/views/404.html
@@ -6,7 +6,26 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1>404 - Page Not Found</h1>
-  <a href="/">Go Home</a>
+
+  <div class="layout">
+
+    <nav class="navbar">
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/contact">Contact</a>
+    </nav>
+
+    <section style="text-align: center;">
+      <h1>404</h1>
+      <p style="margin: 15px 0 25px;">
+        Page not found. The page you are looking for does not exist.
+      </p>
+      <a href="/" style="color:#1e5d73; font-weight:600; text-decoration:none;">
+        ← Go back to Home
+      </a>
+    </section>
+
+  </div>
+
 </body>
 </html>
